css/mystyle.css
body {
    background-color: #D9827C;
    display: grid;
    grid-template-columns:1fr;
    grid-template-rows:1fr 0.2fr;
    margin:0px
}

main {
    grid-column: 1/1;
    padding-right: 10px;
    padding-left: 10px;
}

header h1 {
    text-align: center;
    font-family: 'Xanh Mono', monospace;
}

div.firstbuttons {
    display: flex;
    justify-content: space-between;
}

button {
    border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; -khtml-border-radius: 5px;
    padding: 10px;
    background-color: #55869B;
    border-style: solid;
    color:white
}

button.darktheme {
    background-color: #6F6A87;
}

div.textarea {
    background-color: #F9F3EC;
    padding-top: 1%;
    border: solid 2px;
    padding-bottom: 15%;
    padding-left: 1%;
    margin-top: 5px;
}

div.secondbuttons {
    display: flex;
    justify-content: right;
    padding-top: 5px;
    gap: 8px;
}

button.cancel {
    background-color: #A267DA;
}

div.info {
    display: flex;
    flex-direction: row; 
    justify-content: right;
}

div.info button {
    background-color: #D9827C;
    border-color: transparent; 
    color: black;
}

footer {
    grid-row: 3/3;
    text-align: center;
    padding-bottom: 5px;
}

footer p {
    font-family: 'Xanh Mono', monospace;
}

aside {
    grid-row: 2/2;
    font-family: 'Poor Story', cursive;
    background-color: lightpink;
    margin: 10px;
    text-align: center;
    margin-top: 10px;
    border: 2px solid black;
}

aside ul {
    list-style-type: square;
    text-align: left;
}

@media screen and (min-width: 600px) {
    body {
        grid-template-columns: 1fr 4fr;
        grid-template-rows: 1fr;
    }
    aside {
        grid-column: 1/1;
        grid-row: 1/5;;
        border: 0px;
        margin: 0px;
        border-right: 2px solid;
        height: 100vh;
    }
    main {
        grid-column: 2/2;
        grid-row: 1/3;
    }
    footer {
        grid-column: 2/2;
        grid-row: 4/4;
    }
}

